--- a/app/src/main/res/layout/fragment_new_playthrough.xml
+++ b/app/src/main/res/layout/fragment_new_playthrough.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/spinner_flag_preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="300dp"
