--- a/app/src/main/res/layout/spinner_dropdown.xml
+++ b/app/src/main/res/layout/spinner_dropdown.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
-    android:maxLines="1"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:singleLine="true"
-    style="@style/spinnerDropdownStyle"/>
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@android:id/text1"
+        android:singleLine="true"
+        android:maxLines="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:background="@drawable/spinner_bg"
+        style="@style/spinnerDropdownStyle"
+        />
+
