--- a/app/src/main/res/layout/fragment_new_playthrough.xml
+++ b/app/src/main/res/layout/fragment_new_playthrough.xml
@@ -107,4 +107,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_nations" />
 
+    <ImageView
+        android:id="@+id/difficulty_image_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginStart="300dp"
+        android:layout_marginBottom="164dp"
+        android:adjustViewBounds="true"
+        android:background="#00FFFFFF"
+        android:scaleX="0.3"
+        android:scaleY="0.3"
+        android:src="@drawable/ic_medium_orange_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
