--- a/app/src/main/res/layout/fragment_new_playthrough.xml
+++ b/app/src/main/res/layout/fragment_new_playthrough.xml
@@ -112,7 +112,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginStart="300dp"
-        android:layout_marginBottom="164dp"
+        android:layout_marginBottom="162dp"
         android:adjustViewBounds="true"
         android:background="#00FFFFFF"
         android:scaleX="0.3"
@@ -121,5 +121,53 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinner_difficulties"
+        style="@style/SpinnerBackground"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="16dp"
+        android:spinnerDropDownItemStyle="@style/spinnerDropdownStyle"
+
+        android:spinnerItemStyle="@style/spinnerTextStyle"
+        android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_achievements" />
+
+    <ImageView
+        android:id="@+id/difficulty_spinner_image_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginStart="300dp"
+        android:layout_marginBottom="-55dp"
+        android:adjustViewBounds="true"
+        android:background="#00FFFFFF"
+        android:scaleX="0.3"
+        android:scaleY="0.3"
+
+        android:src="@drawable/ic_medium_orange_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/difficultyHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/nunitosans_bold"
+        android:text="Difficulty"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/spinner_difficulties"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_achievements" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
