--- a/app/src/main/res/layout/fragment_new_playthrough.xml
+++ b/app/src/main/res/layout/fragment_new_playthrough.xml
@@ -80,7 +80,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/achievementHeader"
+        android:id="@+id/achievementGeneratedLinear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
