--- a/app/src/main/res/layout/generate_pop_up.xml
+++ b/app/src/main/res/layout/generate_pop_up.xml
@@ -20,6 +20,24 @@
         android:background="@color/md_theme_light_inverseSurface"
         android:clipToPadding="false">
 
+        <Button
+            android:id="@+id/acceptButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="500dp"
+            android:backgroundTint="@color/md_theme_dark_surfaceTint"
+            android:text="Accept" />
+
+        <Button
+            android:id="@+id/goBackButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="500dp"
+            android:backgroundTint="@color/md_theme_dark_tertiary"
+            android:text="Go Back" />
+
         <LinearLayout
             android:id="@+id/headerGeneratedLinear"
             android:layout_width="match_parent"
