--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,7 +50,7 @@
         <color name="md_theme_dark_tertiary">#B2C8E8</color>
         <color name="md_theme_dark_onTertiary">#1B324B</color>
         <color name="md_theme_dark_tertiaryContainer">#334863</color>
-        <color name="md_theme_dark_onTertiaryContainer">#D2E4FF</color>
+        <color name="md_theme_dark_onTertiaryContainer">#474949</color>
         <color name="md_theme_dark_error">#FFB4AB</color>
         <color name="md_theme_dark_errorContainer">#93000A</color>
         <color name="md_theme_dark_onError">#690005</color>
