--- a/app/src/main/res/layout/playthrough_item.xml
+++ b/app/src/main/res/layout/playthrough_item.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="160dp"
     android:layout_marginTop="8dp"
@@ -35,5 +36,26 @@
         android:layout_toEndOf="@id/item_image"
         android:textColor="@android:color/darker_gray"
         android:textSize="16sp" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="80dp"
+        android:backgroundTint="#EC5959"
+        app:srcCompat="@drawable/ic_icon_trash" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="60dp"
+        android:backgroundTint="#EC5959"
+        app:srcCompat="@drawable/ic_icon_trash" />
 
 </RelativeLayout>
