--- a/app/src/main/res/layout/generate_pop_up.xml
+++ b/app/src/main/res/layout/generate_pop_up.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="200dp"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="400dp"
             android:backgroundTint="@color/md_theme_dark_surfaceTint"
             android:text="Accept" />
 
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="400dp"
             android:backgroundTint="@color/md_theme_dark_tertiary"
             android:text="Go Back" />
 
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_alignParentBottom="false"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="150dp"
             android:orientation="vertical"
             android:padding="30dp"></LinearLayout>
 
@@ -79,7 +79,7 @@
             android:id="@+id/achievementGeneratedLinear"
             android:layout_width="fill_parent"
             android:layout_height="111dp"
-            android:layout_marginTop="125dp"
+            android:layout_marginTop="80dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -102,7 +102,7 @@
                 android:paddingRight="0dp"
                 android:text="Germany"
                 android:textColor="#989898"
-                android:textSize="25dp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
     </FrameLayout>
