--- a/app/src/main/res/layout/playthrough_item.xml
+++ b/app/src/main/res/layout/playthrough_item.xml
@@ -35,10 +35,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="120dp"
         android:layout_marginTop="35dp"
-        android:fontFamily="@font/nunitosans_bold"
+        android:fontFamily="@font/nunitosans_regular"
         android:text="TextView"
         android:textColor="#BABABA"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/item_description"
