--- a/app/src/main/res/layout/settings_dialog.xml
+++ b/app/src/main/res/layout/settings_dialog.xml
@@ -34,7 +34,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/achievementHeader"
+                        android:id="@+id/playthroughHeader"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nunitosans_bold"
